<resources>
    <string name="app_name">Lircay Market</string>


    <!-- LoginActivity -->
    <string name="welcome_text">Bienvenido</string>
    <string name="image_descrition">Logo de Lircay Market</string>
    <string name="email_text">Correo</string>
    <string name="password_text">Contraseña</string>
    <string name="login_buttom_text">Ingresar</string>
    <string name="without_account_text">¿No tienes una cuenta?</string>
    <string name="register_buttom_text">Registrarse</string>
    <string name="user_not_found_error">No se ha encontrado un usuario</string>

    <!-- RegisterActivity -->
    <string name="username_text">Nombre</string>
    <string name="create_account_text">Registrate</string>
    <string name="repeat_password_text">Repita la contraseña</string>
    <string name="create_account_buttom_text">Crear cuenta</string>
    <string name="empty_username_error">No existe un nombre</string>
    <string name="empty_email_error">No existe un correo</string>
    <string name="empty_password_error">No existe una contraseña</string>
    <string name="repeat_password_error">Las constraseñas no coinciden</string>
    <string name="email_used_error">Este correo ya esta utilizado</string>

    <!-- MainActivity -->
    <string name="welcome_user_text">Bienvenid@ </string>
    <string name="optioncard1_title_text">Lista de la despensa</string>
    <string name="optioncard2_title_text">Lista de la compra</string>
    <string name="optioncard3_title_text">Historial de movimientos</string>
    <string name="optioncard1_description_text">Accede a tu lista de despensa personal</string>
    <string name="optioncard2_description_text">Accede a tu lista de compra personal y calcula cuanto gastaras en tus compras</string>
    <string name="optioncard3_description_text">Accede a al historial de tus ultimos movimientos</string>
    <string name="optioncard1_button_text">Abrir lista de la despensa</string>
    <string name="optioncard2_button_text">Abrir lista de la compra</string>
    <string name="optioncard3_button_text">Abrir historial de movimiento</string>


    <!-- PantryListActivity/ShoppingListActivity-->
    <string name="product_category_text">Categoria: </string>
    <string name="product_decription_text">Decripcion: </string>
    <string name="product_amount_text">Cantidad: </string>
    <string name="product_price_text">Precio: </string>
    <string name="add_product_pantry_button_text">Agregar producto a la despensa</string>
    <string name="add_product_shoppinglist_button_text">Agregar producto</string>
    <string name="add_marketlist_button_text">Agregar tiendas a la lista</string>

    <string name="name_product_text">Nombre</string>
    <string name="category_product_text">Categoria</string>
    <string name="description_product_text">Descripcion</string>
    <string name="amount_product_text">Cantidad</string>
    <string name="price_product_text">Precio</string>
    <string name="total_price_text">Precio total: $</string>
    <string name="check_product_text">Articulo comprado</string>

    <string name="edit_descripcion_text">Boton para editar un producto</string>
    <string name="delete_descripcion_text">Boton para eliminar un producto</string>


    <string name="save_button">Guardar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="borrar_button">Borrar</string>
    <string name="empty_category_error">No existe una categoria</string>
    <string name="empty_description_error">No existe una descripcion</string>
    <string name="empty_amount_error">No existe una cantidad</string>
    <string name="under_0_amount_error">Ingrese una cantidad mayor a 0</string>
    <string name="empty_price_error">No existe una precio</string>
    <string name="under_0_price_error">Ingrese un precio mayor a 0</string>

    <!-- MovementListActivity-->
    <string name="create_in_pantry">fue creado en despensa</string>
    <string name="update_in_pantry">fue modificado en despensa</string>
    <string name="delete_in_pantry">fue eliminado en despensa</string>
    <string name="create_in_shoppinglist">fue creado en lista de compra</string>
    <string name="update_in_shoppinglist">fue modificado en lista de compra</string>
    <string name="delete_in_shoppinglist">fue eliminado en lista de compra</string>


    <!-- OptionCard / OptionContainer-->
    <string name="Card_title">Nombre de la actividad</string>
    <string name="Card_description">Descripcion de la actividad</string>
    <string name="Card_button">Boton de la actividad</string>
</resources>